--- a/YumBlazor/appsettings.json
+++ b/YumBlazor/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-YumBlazor-24f40635-9f03-4d65-94f1-fab17ca7d201;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Database=YumBlazor;Trusted_Connection=True; TrustServerCertificate=True; MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
@@ -8,5 +8,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DetailedErrors":true
 }
